@@ -1,3 +1,8 @@
+2010-01-16  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* shpopen.c: support passing in zero/nulls to create an empty
+	SHPObject: http://bugzilla.maptools.org/show_bug.cgi?id=2148
+
 2009-10-29  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* dbfopen.c: avoid crash risk for truncated files. 
